--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -20,10 +20,17 @@
             @Model.Name
         </dd>
         <dt class="col-sm-2">
-            Interviewer Name:
+            First Interviewer Name:
         </dt>
         <dd class="col-sm-10">
             @Model.InterviewerName
+        </dd>
+
+        <dt class="col-sm-2">
+            Second Interviewer Name:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.SecondInterviewerName
         </dd>
         <dt class="col-sm-2">
             Date:
