--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -117,13 +117,13 @@
                             </a>
 
                             <a href="/" class="logo logo-light">
-                               @*  <span class="logo-sm">
+                               @*  <span class="logo-sm">   
                                     <img src="~/theme/images/logo-sm.png" alt="" height="22">
                                 </span> *@
-                                @* <span class="logo-lg">
-                                    <img src="~/theme/images/logo-light.png" alt="" height="17">
+                                <span class="logo-lg">
+                                    <img style="width: 200px;height: 38px;" src="~/theme/images/logo-light.png" alt="" height="17">
 
-                                </span> *@
+                                </span>
                                 <span class="logo-lg">
                                     <img src="~/theme/images/candidate-logo.png" alt="" height="17">
                                 </span>
@@ -378,9 +378,9 @@
                    @*  <span class="logo-sm">
                         <img src="~/theme/images/logo-sm.png" alt="" height="22">
                     </span> *@
-                   @*  <span class="logo-lg">
-                        <img src="~/theme/images/logo-light.png" alt="" height="17">
-                    </span> *@
+                    <span class="logo-lg">
+                        <img style="width: 200px;height: 38px;" src="~/theme/images/logo-light.png" alt="" height="17">
+                    </span>
                 </a> 
                 <button type="button" class="btn btn-sm p-0 fs-20 header-item float-end btn-vertical-sm-hover" id="vertical-hover">
                     <i class="ri-record-circle-line"></i>
@@ -567,7 +567,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-6">
-                            <script>document.write(new Date().getFullYear())</script> © TPS.
+                            <span id="year"></span> © TPS.
                         </div>
                     </div>
                 </div>
@@ -825,7 +825,17 @@
     </script>
 
 
+    <script>
+        function updateYear() {
+            const yearElement = document.getElementById('year');
+            const currentYear = new Date().getFullYear();
+            yearElement.textContent = currentYear;
+        }
 
+        // Update the year when the page loads and then set up a timer to update it annually.
+        updateYear();
+        setInterval(updateYear, 1000); // Update every second (adjust as needed)
+    </script>
 
 
 
