--- a/CMS/CMS.Web/Views/Candidates/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Delete.cshtml
@@ -88,7 +88,7 @@
         </dd> *@
 
         <dt>
-            Company Name
+            CV Provider name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CompanyName)
@@ -119,8 +119,8 @@
     @using (Html.BeginForm())
     {
         <div class="form-actions no-color text-end" >
-            <a class="btn btn-secondary" asp-action="Index">Back to List</a>
             <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
+            <a class="btn btn-secondary" asp-action="Index">Back to List</a>
         </div>
     }
 </div>
