--- a/CMS/CMS.Web/Views/Candidates/Details.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Details.cshtml
@@ -12,7 +12,7 @@
    @*  <dt class="col-sm-2">PositionId:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.Name)</dd>
  *@
-    <dt class="col-sm-2">Company:</dt>
+    <dt class="col-sm-2">CV Provider name:</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.CompanyName)</dd>
 
 
@@ -49,7 +49,7 @@
 </p>
  *@
 <div class="form-group text-end" style="margin-top: 10px;">
-    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
 </div>
