--- a/CMS/CMS.Web/Views/Company/UpdateCompany.cshtml
+++ b/CMS/CMS.Web/Views/Company/UpdateCompany.cshtml
@@ -8,7 +8,7 @@
 
     <div class="form-group">
         <label asp-for="Name" class="control-label"></label>
-        <input asp-for="Name" class="form-control" />
+        <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
@@ -16,7 +16,7 @@
         <label asp-for="CountryId" class="control-label">Country</label>
         @if (ViewBag.CountriesDTOs != null)
         {
-            <select asp-for="CountryId" class="form-control">
+            <select style="width: 30%;" asp-for="CountryId" class="form-control">
                 <option value="">Select a country</option>
                 @foreach (var country in ViewBag.CountriesDTOs)
                 {
@@ -35,24 +35,25 @@
 
     <div class="form-group" style="margin-top: 15px;">
         <label asp-for="PersonName" class="control-label">Person Name</label>
-        <input asp-for="PersonName" class="form-control" />
+        <input style="width: 30%;" asp-for="PersonName" class="form-control" />
         <span asp-validation-for="PersonName" class="text-danger"></span>
     </div>
 
     <div class="form-group" style="margin-top: 15px;">
         <label asp-for="Email" class="control-label">Email</label>
-        <input asp-for="Email" class= "form-control" />
+        <input style="width: 30%;" asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="form-group" style="margin-top: 15px;">
         <label asp-for="PhoneNumber" class="control-label">Phone Number</label>
-        <input asp-for="PhoneNumber" class="form-control" />
+        <input style="width: 30%;" asp-for="PhoneNumber" class="form-control" />
         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
     </div>
 
     <div class="form-group text-end" style="margin-top: 10px;">
-        <a class="btn btn-secondary" asp-action="GetCompanies">Back to list</a>
         <input type="submit" class="btn btn-primary" value="Save" />
+        <a class="btn btn-secondary" asp-action="GetCompanies">Back to list</a>
+
     </div>
 </form>
