--- a/CMS/CMS.Web/Views/Country/UpdateCountry.cshtml
+++ b/CMS/CMS.Web/Views/Country/UpdateCountry.cshtml
@@ -7,11 +7,12 @@
     <div class="form-group"><input type="hidden" asp-for="Id" /></div>
     <div class="form-group">
         <label asp-for="Name" class="control-label"></label>
-        <input asp-for="Name" class="form-control" />
+        <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group text-end" style="margin-top:10px;">
-        <a class="btn btn-secondary" asp-action="GetCountries"> back to list</a>
         <input type="submit" class="btn btn-primary" value="Save" />
+        <a class="btn btn-secondary" asp-action="GetCountries"> Back to list</a>
+
     </div>
 </form>
