--- a/CMS/CMS.Web/Views/Interviews/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Edit.cshtml
@@ -2,6 +2,11 @@
 @model CMS.Application.DTOs.InterviewsDTO
 
 <h2>Edit</h2>
+<style>
+    .custom-dropdown {
+     width:30%;
+    }
+</style>
 
 <form asp-action="Edit" asp-route-id="@Model.InterviewsId">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -10,33 +15,39 @@
   @*  <div class="form-group">  <input type="hidden" asp-for="StatusId" /> </div>*@
     <div class="form-group">
         <label asp-for="CandidateId" class="control-label">Candidate Name</label>
-        @Html.DropDownListFor(model => model.CandidateId, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control" })
+        @Html.DropDownListFor(model => model.CandidateId, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control custom-dropdown" })
         <span asp-validation-for="CandidateId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="PositionId" class="control-label">Position</label>
-        @Html.DropDownListFor(model => model.PositionId, (SelectList)ViewBag.positionList, "Select a Position", new { @class = "form-control" })
+        @Html.DropDownListFor(model => model.PositionId, (SelectList)ViewBag.positionList, "Select a Position", new { @class = "form-control custom-dropdown" })
         <span asp-validation-for="PositionId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="InterviewerId" class="control-label">Interviewer</label>
-        @Html.DropDownListFor(model => model.InterviewerId, (SelectList)ViewBag.interviewersList, "Select an Interviewer", new { @class = "form-control" })
+        @Html.DropDownListFor(model => model.InterviewerId, (SelectList)ViewBag.interviewersList, "Select First Interviewer", new { @class = "form-control custom-dropdown" })
         <span asp-validation-for="InterviewerId" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="SecondInterviewerId" class="control-label">Interviewer</label>
+        @Html.DropDownListFor(model => model.SecondInterviewerId, (SelectList)ViewBag.interviewersList, "Select Second Interviewer", new { @class = "form-control custom-dropdown" })
+        <span asp-validation-for="SecondInterviewerId" class="text-danger"></span>
     </div>
 
 
 
     <div class="form-group">
         <label asp-for="Date" class="control-label"></label>
-        <input asp-for="Date" class="form-control" />
+        <input style="width:30%;" asp-for="Date" class="form-control" />
         <span asp-validation-for="Date" class="text-danger"></span>
     </div>
 
     <div class="form-group" style="margin-top: 15px;">
         <label asp-for="Notes">Notes:</label>
-        <textarea asp-for="Notes" class="form-control"></textarea>
+        <textarea style="width:30%;" asp-for="Notes" class="form-control"></textarea>
         <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
 
@@ -50,7 +61,7 @@
 
         </select>*@
 
-            <select asp-for="StatusId" class="form-control">
+            <select style="width:30%;" asp-for="StatusId" class="form-control">
                 <option value="">Select a Status</option>
                 @foreach (var sta in ViewBag.StatusDTOs)
                 {
@@ -114,8 +125,9 @@
     </div>
 
     <div class="form-group text-end " style="margin-top:10px;">
-        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
         <input type="submit" value="Save" class="btn btn-primary" />
+        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+
     </div>
 
 </form>
