--- a/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
@@ -7,7 +7,7 @@
     <div class="form-group"><input type="hidden" asp-for="Id" /></div>
     <div class="form-group">
         <label asp-for="Name" class="control-label"></label>
-        <input asp-for="Name" class="form-control" />
+        <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
@@ -16,8 +16,9 @@
     </div>
 
     <div class="form-group text-end" style="margin-top:4px;">
-        <a class="btn btn-secondary" asp-action="GetPositions"> back to list</a>
         <input type="submit" class="btn btn-primary" value="Save" />
+        <a class="btn btn-secondary" asp-action="GetPositions"> Back to list</a>
+
     </div>
 </form>
 
